loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: type Booleean
var sortie : Booleean = false
             ^Poucet1:6: error: not found: value bnBiscuit
      bnBiscuit += 1
      ^